2000-08-03  Ulrich Drepper  <drepper@redhat.com>

	* libio/iofwide.c (_IO_fwide): Initialize fp->_codecvt as well.
	* libio/fileops.c (_IO_new_file_fopen): Use _codecvt not from
	_wide_data but from _IO_FILE directly.
	* libio/iofclose.c: Likewise.
	* libio/wfileops.c: Likewise.

	* libio/genops.c (_IO_default_showmanyc): Change return type to size_t.
	* libio/libioP.h: Change prototypes.

2000-08-03  Greg McGary  <greg@mcgary.org>

	* sysdeps/i386/setjmp.S (__sigsetjmp): Pop our
	frame pointer early so that we save caller's frame pointer.
	* sysdeps/i386/elf/setjmp.S: Likewise.

	* sysdeps/unix/sysv/syscalls.list (time, utime): Correct signatures.
	* io/test-utime.c: Test passing NULL as utimbuf* arg.

	* posix/regex.c (EXTEND_BUFFER_HIGH_BOUND): Remove macro.
	(MOVE_BUFFER_POINTER): Handle high_bound properly.
	(EXTEND_BUFFER): Don't call EXTEND_BUFFER_HIGH_BOUND.

2000-08-03  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/big5.c: Updated.
	Patch by Tung-Han Hsieh <thhsieh@twcpro.phys.ntu.edu.tw>.

2000-08-02  Ulrich Drepper  <drepper@redhat.com>

	* Makeconfig (all-subdirs): Add conform.
	* conform/Makefile: Include ../Rules.

	* Makefile (README): Add rules to generate here as well.

2000-08-02  Ulrich Drepper  <drepper@redhat.com>

	* version.h (VERSION): Bump to 2.1.92.

	* sysdeps/ia64/Dist: Add _mcount.S.

	* sysdeps/unix/sysv/linux/ia64/Dist: Add clone.S.

	* sysdeps/unix/sysv/linux/mips/Dist: Add _test_and_set.c.

	* elf/Makefile (distribute): Add missing modules.

	* sysdeps/unix/sysv/linux/s390/Dist: Remove nonexisting files.

	* posix/regex.c (compile_range): Transliate range start and end
	characters to avoid empty range in case of REG_ICASE [PR libc/1842].

	* sysdeps/unix/sysv/linux/ia64/bits/resource.h: Don't include
	asm/resource.h.

	* sysdeps/unix/sysv/linux/arm/Makefile: Undo last change.

2000-08-02  Andreas Jaeger  <aj@suse.de>

	* elf/elf.h (EM_S390): Added.
	(R_390_*): New relocs for S390.
