@@ -1,3 +1,10 @@
+2000-08-04  Greg McGary  <greg@mcgary.org>
+
+	* posix/regex.c (SET_HIGH_BOUND): New macro.
+	(MOVE_BUFFER_POINTER): Use it.
+	(ELSE_EXTEND_BUFFER_HIGH_BOUND): New macro.
+	(EXTEND_BUFFER): Use it.
+
 2000-08-03  Ulrich Drepper  <drepper@redhat.com>
 
 	* libio/iofwide.c (_IO_fwide): Initialize fp->_codecvt as well.
